		   sequence with any macro).
		6. Made the print screen macro take a command argument. You can use
		   this to define a macro to open the scroll back buffer in less (for
		   instance) in a new tab, and search regexp's to your heart's content
		   :).
		7. Made the extra height of active tabs, and radius of tab corners
		   compile time options.


0.4.2 to 0.5.0
\-----------------------------------
Gautam Iyer <gi1242@users.sourceforge.net>
	* Bug Fixes:
		1. Bug #1301269: Make ACS graphics / line drawing characters work
		   under Xft.
		2. Bug #1337635: Made ColorBD/HL work under Xft.
		3. Fixed pseudo-transparency when the root background is tiled on the
		   desktop.
		4. Numerous fixes to options to match the documentation (see CVS
		   logs).
		5. Partially fixed "transparentForce" option (see man page).
		6. Enabled pointer blank under Xft.
		7. Fixed text shadow.
		8. Enabled Xft with menus.
		9. If we're unable to exec the shell (or command specified), print an
		   error message and exit gracefully. (Thanks to Eygene Ryabinkin).
	   10. Fix crash after XIM quits. (Thanks to Gary Zhang for pointing it to
		   us, and attach the patch).
	   11. Fix XIM preedit problems (Thanks to Yoshihiko Kashio for the
	       patch), including:
           - wrong calculation of the preedit area size with hide/show 
		   bars
           - updating the size of the preedit area with resizing window
           - updating the fontset of the preedit area with changing
		   font size
           - the linespace of the preedit area is not configured
           - the preedit character is not drawn on the font baseline
           - clean up codes related to XIM
	   13. Fix compile on cygwin by implementing strcasestr.
	   14. Added a macro XTERM_KEYS to feature.h. If defined, then modified
		   function keys will send the same escape sequences as Xterm.
	   15. Fixed DEC sequences sent by the numeric keypad.

	* Enhancements (Performance):