@@ -79,6 +79,8 @@ Gautam Iyer <gi1242@users.sourceforge.net>
 		   :).
 		7. Made the extra height of active tabs, and radius of tab corners
 		   compile time options.
+		8. Added a --workingDirectory (profile) option to set the working
+		   directory of new tabs. Set to "." to use the cwd of the active tab.
 
 
 0.4.2 to 0.5.0
